# real-time-footfall-tracking

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  cuda-12-4_12.4.1-1_amd64.deb  docker-compose.yml  env.sh  find-large-files.sh  footfall_tracking.py  model.onnx  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: docker-ci-cd.yml
camera_stream/: rtsp_stream.py
config/: config.yaml
dashboard/: app.py
database/: mongo_handler.py
detection/: face_detector.py
embedding/: face_embedding.py
scripts/: 1.py  2.py  3.py  benchmark.py  convert_onnx.py  docker_interface.py  run_realtime_tracking.py  test_cuda.py  test_faiss.py  test_tensorrt.py
src/camera/: ip_camera.py  video_processing.py
src/detection/: face_detection.py  person_detection.py  tensorrt_yolo.py
src/extraction/: body_embedding.py  face_embedding.py
src/matching/: faiss_search.py
src/tracking/: multi_person_tracker.py
tests/: test_app.py
tracking/: tracker.py
