[project]
name = "real-time-footfall-tracking"
version = "0.1.0"
description = "cuda12.2"
authors = [
    {name = "sahillathwal",email = "sahillathwal566@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ultralytics (==8.0.60)",
    "deep-sort-realtime (==1.3.2)",
    "fastapi (==0.100.0)",
    "uvicorn (==0.19.0)",
    "dash (==2.9.3)",
    "flask (==2.2.3)",
    "pymongo (==4.3.3)",
    "psycopg2-binary (==2.9.6)",
    "numpy (==1.26.2)",
    "pandas (==1.5.3)",
    "matplotlib (==3.7.1)",
    "pydantic (==2.5.2)",
    "starlette (<0.28.0)",
    "jinja2 (>=3.1.2)",
    "httpx (>=0.23.0)",
    "typing-extensions (>=4.5.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "opencv-contrib-python (==4.7.0.72)",
    "tensorflow (==2.15.0)",
    "deepface[tensorflow] (==0.0.75)",
    "typeguard (>=4.4.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
