[project]
name = "real-time-footfall-tracking"
version = "0.1.0"
description = ""
authors = [
    {name = "sahillathwal",email = "sahillathwal566@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry.dependencies]
ultralytics = "*"
insightface = "*"
opencv-python = "*"
torchreid = "*"
pymongo = "*"
faiss-gpu = "*"
scikit-learn = "*"
scipy = "*"
numpy = "*"
pandas = "*"
tqdm = "*"
PyYAML = "*"
Flask = "*"
fastapi = "*"
uvicorn = "*"
loguru = "*"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
